22/07/09 Julien Dutheil
* Added TreeDrawing classes.

29/06/09 Julien Dutheil
* Upgraded TreeLikelihood interfaces and SubstitutionModel interface + code lifting.
* New class TreeLikelihoodTools
* Added computation of expected ancestral frequencies.
* Added computation of ancestral frequencies using an empirical bayesian
  approach.

27/06/09 Céline Scornavacca & Julien Dutheil
* Newick and Nexus tree output now use polymorphism in order to print
TreeTemplate objects more efficiently.

24/06/09 Julien Dutheil
* Change precision output while printing parameters.

24/06/09 Laurent Gueguen
* Added codon and general word models.

23/06/09 Julien Dutheil
* Compatibility update: now containers returns references instead of pointers.
* TreeTemplate now uses pointers and not references.
* Added dropTip function in TreeTemplateTools.

10/06/09 -*- Version 1.8.0 -*-

05/06/09 Julien Dutheil
* Bug fixed in Newick parser!

28/05/09 Julien Dutheil
* A hell of bugs fixed!
* Better support for the new model syntax in PhylogeneticsApplicationTools
* Support for the Nexus tree format (single tree, read only for now).

15/05/09 Julien Dutheil
* New syntax for model specification in PhylogeneticApplicationTools.

07/03/09 Julien Dutheil
* Added pseudo counts in substitution models, when setting equilibrium
frequencies [biopp-help-forum:139]
* Changed SubstitutionModel interface in order to return references instead of
  hard copy of matrices.
* Models updated to use the new functions in MatrixTools.

29/03/09 Julien Dutheil
* MarkovModulatedSubstitutionModel inherits from AbstractParametrizable.
* Several changes to support the new parameter aliasing function,
	including in PhylogeneticApplicationTools.

28/03/09 [biopp-devel-forum:19]
* Now empirical substitution models can be properly loaded with non-homogeneous models.

17/03/09 [biopp-devel-forum:11]
* Bug fixed in PhylogeneticApplicationTools::optimizeParameters.
* Also fixed error in documentation of JC models.
