@@ -61,9 +61,13 @@ class AbstractDendrogramPlot:
     short verOrientation_;
 
   public:
-    AbstractDendrogramPlot(const Tree* tree = 0):
-      AbstractTreeDrawing(tree), horOrientation_(ORIENTATION_LEFT_TO_RIGHT), verOrientation_(ORIENTATION_TOP_TO_BOTTOM)
-    {}
+    AbstractDendrogramPlot():
+      AbstractTreeDrawing(), horOrientation_(ORIENTATION_LEFT_TO_RIGHT), verOrientation_(ORIENTATION_TOP_TO_BOTTOM)
+    {
+      addSupportedDrawableProperty_(PROPERTY_BRLEN);
+      addSupportedDrawableProperty_(PROPERTY_BOOTSTRAP);
+      addSupportedDrawableProperty_(PROPERTY_IDS);
+    }
 
   public:
     void setHorizontalOrientation(short orientation) { horOrientation_ = orientation; }
@@ -73,6 +77,8 @@ class AbstractDendrogramPlot:
     short getVerticalOrientation() const { return verOrientation_; }
 
     void plot(GraphicDevice& gDevice) const throw (Exception);
+
+    bool drawProperty(GraphicDevice& gDevice, const string& property) const;
 
   protected:
     virtual void drawDendrogram_(GraphicDevice& gDevice) const throw (Exception) = 0;
@@ -90,6 +96,10 @@ class AbstractDendrogramPlot:
     static short ORIENTATION_RIGHT_TO_LEFT;
     static short ORIENTATION_TOP_TO_BOTTOM;
     static short ORIENTATION_BOTTOM_TO_TOP;
+
+    static std::string PROPERTY_BRLEN;
+    static std::string PROPERTY_BOOTSTRAP;
+    static std::string PROPERTY_IDS;
 
 };
 
