@@ -1,3 +1,6 @@
+05/08/09 Julien Dutheil
+* TreeDrawing classes improved.
+
 22/07/09 Julien Dutheil
 * Added TreeDrawing classes.
 
